# orf_entropy

./: README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: python-ci.yml
examples/: example_small.fasta  run_end_to_end.sh
scripts/: seq_lens.py
slurm/: download.slurm  encoder.slurm  pip_install.slurm  pipeline.slurm
src/orf_entropy/: config.py  errors.py
src/orf_entropy/cli/: __init__.py  main.py
src/orf_entropy/cli/commands/: __init__.py  download.py  encode3di.py  entropy.py  orf.py  run.py  translate.py
src/orf_entropy/encode3di/: __init__.py  prostt5.py
src/orf_entropy/entropy/: __init__.py  shannon.py
src/orf_entropy/io/: __init__.py  fasta.py  jsonio.py
src/orf_entropy/orf/: __init__.py  finder.py  types.py
src/orf_entropy/pipeline/: runner.py
src/orf_entropy/translate/: translator.py
tests/: conftest.py  test_cli_smoke.py  test_entropy.py  test_orf_finder.py  test_prostt5_integration.py  test_translation.py
